--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -10,7 +10,7 @@
                 <source>Title</source>
             </trans-unit>
             <trans-unit id="tx_rmmattigschauer_domain_model_produkte.producttitle">
-                <source>Produktauswahl ENG</source>
+                <source>Product Selection</source>
             </trans-unit>
             <trans-unit id="tx_rmmattigschauer_domain_model_produkte.type">
                 <source>Type</source>
@@ -19,7 +19,7 @@
                 <source>Category</source>
             </trans-unit>
             <trans-unit id="tx_rmmattigschauer_domain_model_produkte.techdata">
-                <source>Techdata</source>
+                <source>Technical specifications</source>
             </trans-unit>
             <trans-unit id="tx_rmmattigschauer_domain_model_produkte.description">
                 <source>Description</source>
